# ros2_python_template

./: README.md  package.xml  setup.cfg  setup.py
launch/: template_launch.py
this_package_name/: node_name.py
