<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>this_package_name</name>
  <version>0.0.0</version>
  <description>The this_package_name package</description>
  <maintainer email="todo@gmail.com">SoftBank corp.</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com//this_package_name</url>
  <url type="bugtracker">https://github.com//this_package_name/issues</url>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
